Fix news adn other
