# resources/swagger.yaml
@@ -3,8 +3,8 @@ info:
   title: PotatoRSS
   description: 'Web RSS reader'
   version: 0.1.0
-servers:
-- url: http://localhost:8080/api/v1
+#servers:
+#- url: http://localhost:8080/api/v1
 tags:
 - name: authorization
   description: Авторизация
@@ -16,7 +16,7 @@ paths:
   /user:
     get:
       tags:
-      - user
+        - user
       summary: Получить пользователя
       responses:
         200:
@@ -37,7 +37,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/ChangeUser'
       responses:
         200:
           description: Успешно
@@ -53,7 +53,11 @@ paths:
       summary: Удалить пользователя
       responses:
         200:
-          description: successful operation
+          description: Успешно
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
       security:
         - bearerAuth: []
   /user/registrate:
@@ -67,7 +71,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/AddUser'
       responses:
         200:
           description: Успешно
@@ -84,9 +88,10 @@ paths:
         200:
           description: Успешно
           content:
-            text/html:
+            application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/Token'
+
       security:
         - basicAuth: []
   /sources:
@@ -101,7 +106,7 @@ paths:
             application/json:
               schema:
                 type: array
-                items: 
+                items:
                   $ref: '#/components/schemas/Source'
       security:
           - bearerAuth: []
@@ -115,7 +120,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Source'
+              $ref: '#/components/schemas/AddSource'
       responses:
         200:
           description: Успешно
@@ -125,6 +130,138 @@ paths:
                 $ref: '#/components/schemas/Source'
       security:
         - bearerAuth: []
+#  /news/tags:
+#    get:
+#      tags:
+#        - tags
+#      summary: Список тегов пользователя
+#      responses:
+#        200:
+#          description: Успешно
+#          content:
+#            application/json:
+#              schema:
+#                type: array
+#                items:
+#                  $ref: '#/components/schemas/Tag'
+#      security:
+#          - bearerAuth: []
+  /news/{newsID}/swapfavourite:
+    put:
+      tags:
+        - news
+      summary: Изменить значение избраного
+      parameters:
+        - in: path
+          name: newsID
+          schema:
+            type: integer
+          required: true
+          description: ID новости
+      responses:
+        200:
+          description: Успешно
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/News'
+      security:
+        - bearerAuth: []
+  /news/{newsID}:
+    get:
+      tags:
+        - news
+      summary: Получить новость
+      parameters:
+        - in: path
+          name: newsID
+          schema:
+            type: integer
+          required: true
+          description: ID новости
+      responses:
+        200:
+          description: Успешно
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/News'
+      security:
+        - bearerAuth: []
+  /news/{newsID}/tags:
+    get:
+      tags:
+        - tags
+      summary: Получить теги новости
+      parameters:
+        - in: path
+          name: newsID
+          schema:
+            type: integer
+          required: true
+          description: ID новости
+      responses:
+        200:
+          description: Успешно
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Tag'
+      security:
+          - bearerAuth: []
+    put:
+      tags:
+        - tags
+      summary: Добавить тег
+      parameters:
+        - in: path
+          name: newsID
+          schema:
+            type: integer
+          required: true
+          description: ID новости
+      requestBody:
+        description: Имя тега
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ChangeTag'
+      responses:
+        200:
+          description: Успешно
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Tag'
+      security:
+          - bearerAuth: []
+    delete:
+      tags:
+        - tags
+      summary: Удалить тег у новости
+      parameters:
+        - in: path
+          name: newsID
+          schema:
+            type: integer
+          required: true
+          description: ID новости
+      responses:
+        200:
+          description: Успешно
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Tag'
+      security:
+          - bearerAuth: []
   /sources/{sourceID}:
     get:
       tags:
@@ -146,7 +283,7 @@ paths:
                 $ref: '#/components/schemas/Source'
       security:
         - bearerAuth: []
-    put:  
+    put:
       tags:
         - source
       summary: Изменить ресурс
@@ -163,7 +300,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Source'
+              $ref: '#/components/schemas/ChangeSource'
       responses:
         200:
           description: Успешно
@@ -187,8 +324,35 @@ paths:
       responses:
         200:
           description: Успешно
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Source'
       security:
         - bearerAuth: []
+  /sources/{sourceID}/news:
+    get:
+      tags:
+        - news
+      summary: Список новостей
+      parameters:
+        - in: path
+          name: sourceID
+          schema:
+            type: integer
+          required: true
+          description: Id ресурса
+      responses:
+        200:
+          description: Успешно
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/News'
+      security:
+          - bearerAuth: []
 components:
   schemas:
     User:
@@ -206,6 +370,30 @@ components:
           type: string
         email:
           type: string
+        avatar:
+          type: string
+          format: byte
+    AddUser:
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+        email:
+          type: string
+    ChangeUser:
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+        email:
+          type: string
+        avatar:
+          type: string
+          format: byte
     Source:
       type: object
       properties:
@@ -221,7 +409,77 @@ components:
           type: string
         link:
           type: string
-        
+    AddSource:
+      type: object
+      properties:
+        title:
+          type: string
+        description:
+          type: string
+        link:
+          type: string
+    ChangeSource:
+      type: object
+      properties:
+        title:
+          type: string
+        description:
+          type: string
+        link:
+          type: string
+    News:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        source_id:
+          type: integer
+          format: int64
+        title:
+          type: string
+        content:
+          type: string
+        favourite:
+          type: boolean
+        link:
+          type: string
+        tags:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+                format: int64
+              title:
+                type: string
+    Tag:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        title:
+          type: string
+    ChangeTag:
+      type: object
+      properties:
+        title:
+          type: string
+    Token:
+      type: object
+      properties:
+        id:
+          type: integer
+        user_id:
+          type: integer
+        life_time:
+          type: integer
+        creation_time:
+          type: integer
+        token:
+          type: string
   securitySchemes:
     bearerAuth:
       type: http
